# Group10.BDAT1004.FinalAssignment

./: api_to_db.py  main.py  output.json  output_data.py  pyproject.toml
templates/: index.html  notdash2.html
