[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
textblob = "^0.17.1"
tweepy = "^4.8.0"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
seaborn = "^0.11.2"
pymongo = "^4.3.3"
Flask-DebugToolbar = "^0.13.1"
Flask = "^2.2.2"
plotly = "^5.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"